# kata-01

./: .gitignore  Makefile  README.md  kata-01.cabal
src/Kata/: RomanNumeralsConverter.hs
test/: Main.hs
test/Kata/: RomanNumeralsConverterTests.hs
