name:              katazeroone
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.22

executable kata-01
    main-is:        Main.hs
    other-modules:  Kata.RomanNumeralsConverter, Kata.RomanNumeralsConverterTests
    hs-source-dirs:  test, src
    build-depends:   base
    default-language: Haskell2010
    build-depends:
        base >= 4.6
        , containers >= 0.5.6.3

